# 2DCarGameWithGA

./: CMakeLists.txt  LICENSE  README.md  main.cpp
algo/: genetic_algo.h  simple_brain.h
game/: game.h
objects/: car.h  track.h
ui/: widget.cpp  widget.h
